objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACLS_Attempt__c</fullName>
        <label>Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFX__eFax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related eFax</label>
        <referenceTo>EFX__efax__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TaskType__c</fullName>
        <label>Five9 Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal this task is meant to address</description>
        <inlineHelpText>Goal this task is meant to address</inlineHelpText>
        <label>Goal</label>
        <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Problem this task is mean to address</description>
        <inlineHelpText>Problem this task is mean to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Counselling</fullName>
                </value>
                <value>
                    <fullName>Vaccination</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Conditions_Status__c</fullName>
        <label>Condition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluated - No Risk</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Symptomatic</fullName>
                </value>
                <value>
                    <fullName>Symptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Cured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Contract_Tracing_Status__c</fullName>
        <label>Contract Tracing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Monitored_at_Home__c</fullName>
        <label>Monitored at Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskType__c</fullName>
        <label>TaskType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Testing Recommended</fullName>
                </value>
                <value>
                    <fullName>Test Scheduled</fullName>
                </value>
                <value>
                    <fullName>Test Results Pending</fullName>
                </value>
                <value>
                    <fullName>Negative Test</fullName>
                </value>
                <value>
                    <fullName>Positive Test</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ActionComponent__c</fullName>
        <description>Indicates the lightning action component that is associated with the record. This
        is used to render the component dynamically on the layout. Note that the API name of the picklist values must
        follow the naming convention Namespace__ComponentName For e.g PatientConnect__PC_eLetter2 or c__SampleComponent</description>
        <inlineHelpText>Indicates the lightning action component that is associated with the record</inlineHelpText>
        <label>Action Component</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PatientConnect__PC_PharmacyEBenefitsLookup</fullName>
                    <label>Lookup Pharmacy Ebenefits</label>
                </value>
                <value>
                    <fullName>PatientConnect__PC_BookAppointment</fullName>
                    <label>Book an appointment</label>
                </value>
                <value>
                    <fullName>PatientConnect__PC_Referral_Launch</fullName>
                    <label>Initiate a Referral</label>
                </value>
                <value>
                    <fullName>PatientConnect__PC_LaunchLogACall</fullName>
                    <label>Log a Call</label>
                </value>
                <value>
                    <fullName>ACLS_PC_eLetter2</fullName>
                    <label>Send eLetter</label>
                </value>
                <value>
                    <fullName>PatientConnect__PC_eLetter2</fullName>
                    <isActive>false</isActive>
                    <label>Send eLetter2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Activity_Template_ID__c</fullName>
        <description>The ID of the support model template that is used to create the task.</description>
        <label>Activity Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Assign_to_Role__c</fullName>
        <description>The care team member role to which the task is assigned to.</description>
        <inlineHelpText>The care team member role to which the task is assigned to.</inlineHelpText>
        <label>Assign to Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Reimbursement Manager</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>Clinical Educator</fullName>
                </value>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Call_Outcome__c</fullName>
        <description>Outcome of phone call (if reached, or left message, etc.).</description>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Capture_Time__c</fullName>
        <description>The date and time on which the task was created.</description>
        <label>Capture Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>The primary category of the activity.</description>
        <inlineHelpText>The primary category of the activity.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>Alt. Funding</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Copay</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Support Check-In</fullName>
                </value>
                <value>
                    <fullName>Field Activity</fullName>
                </value>
                <value>
                    <fullName>Patient Enrollment</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Referral</fullName>
                </value>
                <value>
                    <fullName>Treatment Reminder</fullName>
                </value>
                <value>
                    <fullName>Welcome Gesture</fullName>
                </value>
                <value>
                    <fullName>Training Reminder</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Channel__c</fullName>
        <description>Custom copy of managed field &apos;Task Subtype&apos; for use in Activity timeline via custom metadata</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>eLetter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Close_Date__c</fullName>
        <description>The date and time on which the task was closed.</description>
        <inlineHelpText>The date and time on which the task was closed.</inlineHelpText>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Direction__c</fullName>
        <description>Indicates if the activity such as fax,sms, email or call is inbound or outbound</description>
        <inlineHelpText>Indicate if the task/activity such as fax,sms, email or call is inbound or outbound</inlineHelpText>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the document associated with the task, if any.</description>
        <label>Document</label>
        <referenceTo>PC_Document__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_IsOverdue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked/Selected when the task has passed its due date.</description>
        <inlineHelpText>Checked/Selected when the task has passed its due date.</inlineHelpText>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Is_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a task/event is of type SMS</description>
        <inlineHelpText>Indicates if a task/event is of type SMS</inlineHelpText>
        <label>Is SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Original_Due_Date__c</fullName>
        <description>Used to store the original due date if the task’s Due Date is changed.</description>
        <inlineHelpText>Used to store the original due date if the task’s Due Date is changed.</inlineHelpText>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Participant__c</fullName>
        <description>Custom field to indicate various participants that task relates to</description>
        <label>Participant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient Connect custom field to look up a pharmacy referral on Task</description>
        <label>Pharmacy Referral</label>
        <referenceTo>PC_Pharmacy_Referral__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Priority_Value__c</fullName>
        <description>Value associated with the acticity based on the priority.</description>
        <formula>IF(text(Priority) = &apos;High&apos;,10,IF(text(Priority) = &apos;Normal&apos;,20,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value associated with the acticity based on the priority.</inlineHelpText>
        <label>Priority Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the program case with which the task is associated.</description>
        <inlineHelpText>Reference to the program case with which the task is associated.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Child Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Request Form associated with the activity, if any.</description>
        <label>Request Form</label>
        <referenceTo>PC_Request_Form__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>PC_Activities_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Send_to_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected if the activity details need to be sent to patient.</description>
        <label>Send to Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Starred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for starred and important tasks and activities.</description>
        <inlineHelpText>Checked for starred and important tasks and activities.</inlineHelpText>
        <label>Starred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Sub_Category__c</fullName>
        <description>The Sub-category of activity.</description>
        <inlineHelpText>The Sub-category of activity.</inlineHelpText>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approval request</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Call pharmacy</fullName>
                </value>
                <value>
                    <fullName>Change of address</fullName>
                </value>
                <value>
                    <fullName>Change of treatment</fullName>
                </value>
                <value>
                    <fullName>Delivery confirmation</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
                <value>
                    <fullName>Discontinuation</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>HCP notification</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>eBV</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SupportPlanActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Support Plan Activity from which this activity was generated from</description>
        <label>Support Plan Activity</label>
        <referenceTo>PC_SupportPlanActivity__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>